--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "throwbone",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jasmine"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lincolnhutchinson/throwbone.git"
-  },
-  "author": "Lincoln Hutchinson",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lincolnhutchinson/throwbone/issues"
-  },
-  "homepage": "https://github.com/lincolnhutchinson/throwbone#readme",
-  "devDependencies": {
-    "jasmine": "^4.5.0"
-  }
+	"name": "throwbone",
+	"version": "0.1.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "npm run build:live",
+		"build": "tsc -p .",
+		"build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
+		"test": "jest"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/lincolnhutchinson/throwbone.git"
+	},
+	"author": "Lincoln Hutchinson",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/lincolnhutchinson/throwbone/issues"
+	},
+	"homepage": "https://github.com/lincolnhutchinson/throwbone#readme",
+	"devDependencies": {
+		"@types/jest": "^29.2.3",
+		"@types/node": "^18.11.9",
+		"jest": "^29.3.1",
+		"nodemon": "^2.0.20",
+		"ts-jest": "^29.0.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.3"
+	}
 }
