--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "throwbone",
 	"version": "0.1.0",
 	"description": "",
-	"main": "index.js",
+	"main": "lib/index",
+	"types": "lib/index",
 	"scripts": {
 		"start": "npm run build:live",
 		"build": "tsc -p .",
