--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "npm run build:live",
 		"build": "tsc -p .",
 		"build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
-		"test": "jest"
+		"test": "npm run build && mocha"
 	},
 	"repository": {
 		"type": "git",
@@ -21,11 +21,14 @@
 	},
 	"homepage": "https://github.com/lincolnhutchinson/throwbone#readme",
 	"devDependencies": {
-		"@types/jest": "^29.2.3",
+		"@types/chai": "^4.3.4",
+		"@types/mocha": "^10.0.0",
 		"@types/node": "^18.11.9",
-		"jest": "^29.3.1",
+		"@types/sinon": "^10.0.13",
+		"chai": "^4.3.7",
+		"mocha": "^10.1.0",
 		"nodemon": "^2.0.20",
-		"ts-jest": "^29.0.3",
+		"sinon": "^14.0.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.3"
 	},
