--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
 	"name": "throwbone",
 	"version": "0.1.0",
 	"description": "",
-	"main": "lib/index",
-	"types": "lib/index",
+	"exports": "./lib/index.js",
+	"types": "./lib/index.d.ts",
+	"type": "module",
+	"engines": {
+		"node": ">=14.16"
+	},
 	"scripts": {
 		"start": "npm run build:live",
 		"build": "tsc -p .",
@@ -24,15 +28,16 @@
 		"@types/chai": "^4.3.4",
 		"@types/mocha": "^10.0.0",
 		"@types/node": "^18.11.9",
+		"@types/seedrandom": "^3.0.2",
 		"@types/sinon": "^10.0.13",
 		"chai": "^4.3.7",
 		"mocha": "^10.1.0",
 		"nodemon": "^2.0.20",
 		"sinon": "^14.0.2",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.9.3"
+		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"random": "^4.0.2"
+		"random": "^4.0.2",
+		"seedrandom": "^3.0.5"
 	}
 }
