Switch back to using node16 in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
 		"target": "es2016",                                  
-		"module": "ES2020",                                
-		"moduleResolution": "node",                       
+		"module": "node16",                                
+		"moduleResolution": "node16",                       
 		"declaration": true,                             
 		"outDir": "./lib",                              
 		"esModuleInterop": true,                       
