--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"start": "npm run build:live",
 		"build": "tsc -p .",
 		"build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
-		"test": "npm run build && mocha"
+		"test": "ava"
 	},
 	"repository": {
 		"type": "git",
@@ -25,13 +25,13 @@
 	},
 	"homepage": "https://github.com/lincolnhutchinson/throwbone#readme",
 	"devDependencies": {
+		"@ava/typescript": "^3.0.1",
 		"@types/chai": "^4.3.4",
 		"@types/mocha": "^10.0.0",
 		"@types/node": "^18.11.9",
 		"@types/seedrandom": "^3.0.2",
 		"@types/sinon": "^10.0.13",
-		"chai": "^4.3.7",
-		"mocha": "^10.1.0",
+		"ava": "^5.1.0",
 		"nodemon": "^2.0.20",
 		"sinon": "^14.0.2",
 		"typescript": "^4.8.4"
@@ -39,5 +39,13 @@
 	"dependencies": {
 		"random": "^4.0.2",
 		"seedrandom": "^3.0.5"
+	},
+	"ava": {
+		"typescript": {
+			"rewritePaths": {
+				"src/": "lib/"
+			},
+			"compile": "tsc"
+		}
 	}
 }
